# Corewar

./: ._src_vm  ._test_fork.s  ._test_ldi.s  ._test_zjmp.s  .gitignore  CMakeLists.txt  Error_test_asm.s  Makefile  README  README.md  all_test.cor  all_test.s  author  big_feet.s  bot.cor  bot.s  fot.cor  fot.s  i.c.winner.s  jumper_test.cor  jumper_test.s  jumper_test_v1.cor  main  my_asm  runner.s  test_add.cor  test_add.cor~  test_add.s  test_aff.cor  test_aff.s  test_and.cor  test_and.s  test_comment.ror  test_comment.s  test_fork.cor  test_fork.ror  test_fork.s  test_ld.cor  test_ld.s  test_ldi.cor  (+19 more)
Test_commands/: ._test_lldi.s  test_ld_lld.s  test_ldi.s  test_lldi.s
Tests/: diff_loop.sh  my_asm  ultimate-surrender.s
champs/: Survivor.s  jumper.cor
champs/championships/: ._2014
champs/championships/2014/: ._bguy  ._bjacob  ._brandazz  ._cdivry  ._clafleur  ._dcohen  ._ekocevar  ._esusseli  ._evlasova  ._fcorre  ._gbir  ._gjestin  ._gleger  ._gmange  ._gpetrov  ._gudepard  ._hmichals  ._hmoutaou  ._kelickel  ._kmonrose  ._ldesgoui  ._lseguin  ._lsirigna  ._mbacoux  ._mconraux  ._rabid-on  ._results.txt  ._rmasse  ._sbuono  ._srabah-m  ._tdemay  ._vrey  ._ybouvet
champs/championships/2014/bguy/: ._sam_2.0.s  sam_2.0.s
champs/championships/2014/bjacob/: ._doge.s
champs/championships/2014/brandazz/: ._Rainbow_dash.s
champs/championships/2014/cdivry/: ._youforkmytralala.s
champs/championships/2014/clafleur/: ._big_feet.s
champs/championships/2014/dcohen/: ._loose.s
champs/championships/2014/ekocevar/: ._mandragore.s
champs/championships/2014/esusseli/: ._gedeon.s
champs/championships/2014/evlasova/: ._terminator.s
champs/championships/2014/fcorre/: ._ultimate-surrender.s
champs/championships/2014/gbir/: .__.s
champs/championships/2014/gjestin/: ._salamahenagalabadoun.s
champs/championships/2014/gleger/: ._Machine-gun.s
champs/championships/2014/gmange/: ._corelol.s
champs/championships/2014/gpetrov/: ._MarineKing.s
champs/championships/2014/gudepard/: ._Kappa.s
champs/championships/2014/hmichals/: ._Wall.s
champs/championships/2014/hmoutaou/: ._Misaka_Mikoto.s
champs/championships/2014/kelickel/: ._Varimathras.s
champs/championships/2014/kmonrose/: ._justin_bee.s
champs/championships/2014/ldesgoui/: .__honeybadger.s
champs/championships/2014/lseguin/: ._skynet.s
champs/championships/2014/lsirigna/: ._live.s
champs/championships/2014/mbacoux/: ._meowluigi.s
champs/championships/2014/mconraux/: ._dubo.s
champs/championships/2014/rabid-on/: ._jinx.s
champs/championships/2014/rmasse/: ._THUNDER.s
champs/championships/2014/sbuono/: ._Asombra.s
champs/championships/2014/srabah-m/: ._littlepuppy.s
champs/championships/2014/tdemay/: ._champ.s
champs/championships/2014/vrey/: ._darksasuke.s
champs/championships/2014/ybouvet/: ._casimir.s
champs/examples/: ._bee_gees.s  ._bigzork.s  ._fluttershy.s  ._helltrain.s  ._turtle.s  ._zork.s
new_libft/: ._Makefile  ._author  ._obj  ._srcs  Makefile  author
new_libft/srcs/: ._check_colour.c  ._check_spec.c  ._check_spec_helper.c  ._ft_atoi.c  ._ft_atoll.c  ._ft_bzero.c  ._ft_factorial.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_itoa.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_lstmap.c  ._ft_lstnew.c  ._ft_lstrev.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memcpy.c  ._ft_memdel.c  ._ft_memdup.c  ._ft_memmove.c  ._ft_memset.c  ._ft_power.c  ._ft_printf.c  ._ft_putchar.c  ._ft_putchar_fd.c  ._ft_putendl.c  ._ft_putendl_fd.c  ._ft_putnbr.c  ._ft_putnbr_fd.c  ._ft_putstr.c  ._ft_putstr_fd.c  ._ft_sqrt.c  (+140 more)
src/: array_string.c  bcode.c  check_bot_params.c  command_add.c  command_aff.c  command_and.c  command_fork.c  command_ld.c  command_ldi.c  command_lfork.c  command_live.c  command_lld.c  command_lldi.c  command_or.c  command_st.c  command_sti.c  command_sub.c  command_xor.c  command_zjmp.c  create_command.c  data_constructor.c  error_messenger.c  get_arg.c  get_args_type.c  get_op_code.c  is_number.c  label_table.c  lex_analyze.c  linked_list.c  main.c  main.h  op.c  put_label.c  split_line.c  syntax_analyze.c  write_bcode.c
src_asm/: #create_command.c#  #lex_analyze.c#  Makefile  array_string.c  bcode.c  check_bot_params.c  create_command.c  data_constructor.c  error_messenger.c  get_arg.c  get_args_type.c  get_op_code.c  helpers.c  label_table.c  lex_analyze.c  linked_list.c  main.c  main.h  main.h~  op.c  op.h  put_label.c  split_line.c  syntax_analyze.c  syntax_analyze.c~  write_bcode.c
src_vm/: #op.h#  .nfs.2005108b.66d0  .nfs.200510f0.1eeb  .nfs.200510f8.2dcf  .nfs.2005110e.0e42  .nfs.20051110.0fef  Makefile  Makefile~  a.out  add_players.c  args_functions.c  args_functions.h  bcode_functions.c  bcode_functions.h  bots_functions.c  bots_functions.h  check_live_bots.c  check_live_bots.h  commands.c  commands.h  commands_manager.c  commands_manager.h  data.h  display_memory.c  error_managment.c  flags_parser.c  flags_parser.h  init_ncurses.c  initialization.c  initialization.h  ld_functions.c  ld_functions.h  main.c  my_vm  ncurses_creator_win.c  ncurses_display.c  ncurses_display_debug.c  ncurses_display_memory.c  ncurses_display_stats.c  ncurses_display_winner.c  (+25 more)
src_vm/SDL2.framework/: ._Versions
src_vm/SDL2.framework/Versions/: ._A
src_vm/SDL2.framework/Versions/A/: ._Headers  ._Resources
