cmake_minimum_required(VERSION 3.7)
project(Corewar)

set(CMAKE_C_FLAGS -std=c99)

set(SOURCE_FILES
        new_libft/srcs/check_colour.c
        new_libft/srcs/check_spec.c
        new_libft/srcs/check_spec_helper.c
        new_libft/srcs/ft_atoi.c
        new_libft/srcs/ft_atoll.c
        new_libft/srcs/ft_bzero.c
        new_libft/srcs/ft_factorial.c
        new_libft/srcs/ft_isalnum.c
        new_libft/srcs/ft_isalpha.c
        new_libft/srcs/ft_isascii.c
        new_libft/srcs/ft_isdigit.c
        new_libft/srcs/ft_isprint.c
        new_libft/srcs/ft_itoa.c
        new_libft/srcs/ft_lstadd.c
        new_libft/srcs/ft_lstdel.c
        new_libft/srcs/ft_lstdelone.c
        new_libft/srcs/ft_lstiter.c
        new_libft/srcs/ft_lstmap.c
        new_libft/srcs/ft_lstnew.c
        new_libft/srcs/ft_lstrev.c
        new_libft/srcs/ft_memalloc.c
        new_libft/srcs/ft_memccpy.c
        new_libft/srcs/ft_memchr.c
        new_libft/srcs/ft_memcmp.c
        new_libft/srcs/ft_memcpy.c
        new_libft/srcs/ft_memdel.c
        new_libft/srcs/ft_memdup.c
        new_libft/srcs/ft_memmove.c
        new_libft/srcs/ft_memset.c
        new_libft/srcs/ft_power.c
        new_libft/srcs/ft_printf.c
        new_libft/srcs/ft_putchar.c
        new_libft/srcs/ft_putchar_fd.c
        new_libft/srcs/ft_putendl.c
        new_libft/srcs/ft_putendl_fd.c
        new_libft/srcs/ft_putnbr.c
        new_libft/srcs/ft_putnbr_fd.c
        new_libft/srcs/ft_putstr.c
        new_libft/srcs/ft_putstr_fd.c
        new_libft/srcs/ft_sqrt.c
        new_libft/srcs/ft_strcat.c
        new_libft/srcs/ft_strchr.c
        new_libft/srcs/ft_strclr.c
        new_libft/srcs/ft_strcmp.c
        new_libft/srcs/ft_strcpy.c
        new_libft/srcs/ft_strdel.c
        new_libft/srcs/ft_strdup.c
        new_libft/srcs/ft_strequ.c
        new_libft/srcs/ft_striter.c
        new_libft/srcs/ft_striteri.c
        new_libft/srcs/ft_strjoin.c
        new_libft/srcs/ft_strlcat.c
        new_libft/srcs/ft_strlen.c
        new_libft/srcs/ft_strmap.c
        new_libft/srcs/ft_strmapi.c
        new_libft/srcs/ft_strncat.c
        new_libft/srcs/ft_strncmp.c
        new_libft/srcs/ft_strncpy.c
        new_libft/srcs/ft_strnequ.c
        new_libft/srcs/ft_strnew.c
        new_libft/srcs/ft_strnstr.c
        new_libft/srcs/ft_strrchr.c
        new_libft/srcs/ft_strsplit.c
        new_libft/srcs/ft_strstr.c
        new_libft/srcs/ft_strsub.c
        new_libft/srcs/ft_strtrim.c
        new_libft/srcs/ft_swap.c
        new_libft/srcs/ft_tolower.c
        new_libft/srcs/ft_toupper.c
        new_libft/srcs/get_b_spec.c
        new_libft/srcs/get_c_spec.c
        new_libft/srcs/get_d_spec.c
        new_libft/srcs/get_ls_spec.c
        new_libft/srcs/get_next_line.c
        new_libft/srcs/get_o_spec.c
        new_libft/srcs/get_p_spec.c
        new_libft/srcs/get_result.c
        new_libft/srcs/get_s_spec.c
        new_libft/srcs/get_spec.c
        new_libft/srcs/get_u_spec.c
        new_libft/srcs/get_x_spec.c
        new_libft/srcs/libft.h
        new_libft/srcs/new_spec.c
        new_libft/srcs/numb_to_char.c
        new_libft/srcs/spec_helper.c
        new_libft/srcs/str_capitalizer.c
        new_libft/srcs/strp_functions.c
        src_asm/array_string.c
        src_asm/bcode.c
        src_asm/check_bot_params.c
        src_asm/create_command.c
        src_asm/data_constructor.c
        src_asm/error_messenger.c
        src_asm/get_arg.c
        src_asm/get_args_type.c
        src_asm/get_op_code.c
        src_asm/helpers.c
        src_asm/label_table.c
        src_asm/lex_analyze.c
        src_asm/linked_list.c
        src_asm/main.c
        src_asm/main.h
        src_asm/op.c
        src_asm/op.h
        src_asm/put_label.c
        src_asm/split_line.c
        src_asm/syntax_analyze.c
        src_asm/write_bcode.c)

add_executable(Corewar ${SOURCE_FILES})